fix[untested](General): add height and overflow-y property to body to remove scroll related issue

--- a/index.css
+++ b/index.css
@@ -103,6 +103,8 @@ body {
     margin: 0px;
     overflow: hidden;
     background-color: white;
+    height: 100%;
+    overflow-y: hidden;
 }
 
 /* Initial Page */
